# ocean-pulse

backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py
backend/app/routes/: health.py
backend/app/services/: __init__.py
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/_components/: dashboard-shell.tsx  landing-page.tsx
frontend/components/dashboard/: globe-container.tsx  info-panel.tsx  loading-overlay.tsx  navbar.tsx  sidebar.tsx
frontend/components/globe/: interactive-earth.tsx
frontend/components/ui/: button.tsx
frontend/lib/: api.ts
